// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`QuizOptionIndicator renders correct indicator snapshot 1`] = `
<div>
  <span
    class="quiz-option-indicator correct"
    style="margin-left: 8px;"
    title="Correct"
  >
    ✔️
  </span>
  <div
    style="position: fixed; bottom: 24px; right: 24px; z-index: 9999;"
  />
</div>
`;

exports[`QuizOptionIndicator renders incorrect indicator snapshot 1`] = `
<div>
  <span
    class="quiz-option-indicator incorrect"
    style="margin-left: 8px;"
    title="Incorrect"
  >
    ❌
  </span>
  <div
    style="position: fixed; bottom: 24px; right: 24px; z-index: 9999;"
  />
</div>
`;

exports[`QuizOptionIndicator renders selected indicator snapshot 1`] = `
<div>
  <span
    class="quiz-option-indicator selected"
    style="margin-left: 8px;"
    title="Selected"
  >
    •
  </span>
  <div
    style="position: fixed; bottom: 24px; right: 24px; z-index: 9999;"
  />
</div>
`;
